# prysm

./: WORKSPACE  deps.bzl  go.mod  go.sum
beacon-chain/blockchain/: receive_block.go  service_test.go
beacon-chain/core/helpers/: signing_root.go
beacon-chain/operations/attestations/kv/: aggregated.go  unaggregated.go
beacon-chain/p2p/: service.go
beacon-chain/rpc/validator/: BUILD.bazel  proposer_test.go
beacon-chain/sync/: rpc_status_test.go
beacon-chain/sync/initial-sync/: BUILD.bazel  round_robin.go
shared/bls/: BUILD.bazel  bls.go
shared/bls/herumi/: secret_key_test.go
shared/bls/supranational/: BUILD.bazel  bls.go
shared/depositutil/: deposit.go  deposit_test.go
validator/accounts/v2/: BUILD.bazel  cmd.go  list.go  new.go  recover.go
validator/client/: attest.go  graffitiwall.go  propose.go  service.go  validator.go
validator/flags/: flags.go
validator/keymanager/v2/direct/: direct.go
