load("@io_bazel_rules_go//go:def.bzl", "go_test")
load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["bls.go"],
    importpath = "github.com/prysmaticlabs/prysm/shared/bls/supranational",
    visibility = ["//visibility:public"],
    deps = [
        "//shared/featureconfig:go_default_library",
        "//shared/params:go_default_library",
        "@com_github_dgraph_io_ristretto//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_supranational_blst//bindings/go:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "bls_benchmark_test.go",
        "bls_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//shared/bls:go_default_library",
        "//shared/bytesutil:go_default_library",
    ],
)
